# Personal_AI_Infrastructure

./: .gitignore
.claude/: pyproject.toml
.claude/commands/: audio-transcription.md  markdown-builder.md  mermaid-to-image.md  pdf-to-markdown.md  video-to-audio.md
.claude/skills/PAI/: SKILL.md
.claude/skills/extract-content-summarize/: QUICKSTART.md  SKILL.md
.claude/skills/extract-content-summarize/prompts/: content_extractor.md  reflection_generator.md
.claude/skills/irish-dictionary/: SKILL.md
.claude/skills/irish-rhyming/: SKILL.md
.claude/skills/learning/: SKILL.md
.claude/skills/video-transcription/: SKILL.md
.claude/tools/: OPENROUTER_README.md  markdown_builder.py  mermaid-to-image.ts  openrouter_call.py  pdf_to_markdown.py  video_to_audio.py
.claude/tools/audio_transcription/: config.py  main.py  pyproject.toml
.claude/tools/audio_transcription/workflow/: __init__.py  main_workflow.py  state.py
.claude/tools/audio_transcription/workflow/nodes/: __init__.py  audio_processor.py  formatter.py  transcriber.py
